--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_profile_search_tag.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_profile_search_tag.yml
@@ -21,18 +21,19 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"fb336a3529a56f3db4177489c753870e"
+      - W/"3ba43b5bcfe0477bffbeecadd8966ae9"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 98f21b38-6246-404e-9889-054eb154fe9e
+      - 2bfb04fa-a950-4ee3-8162-545c92fb19e7
       X-Runtime:
-      - '0.012400'
+      - '0.014795'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"3","type":"profile","attributes":{"zipcode":"80304","user_id":3,"profile_picture":"http://www.google.com","username":"slipknot"}},{"id":"4","type":"profile","attributes":{"zipcode":"80303","user_id":4,"profile_picture":"http://www.google.com","username":"photos
-        by jim"}}]}'
-  recorded_at: Wed, 21 Apr 2021 02:06:10 GMT
+        by jim"}},{"id":"6","type":"profile","attributes":{"zipcode":"80228","user_id":6,"profile_picture":"http://www.google.com","username":"former
+        salesman"}}]}'
+  recorded_at: Wed, 21 Apr 2021 22:09:48 GMT
 recorded_with: VCR 6.0.0
